tests/NormalTests/paczka1/small_fuzzy/54509292.err
Error in line 6: QkK A37 -4,9
Error in line 2: JvvyZwZSdZ8 S111 3,4
